package classification.model;

public record Result(Label correctLabel, Label predictedLabel) {}
